src/ir/tests/snapshots/fern__ir__tests__lower__early_exit.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    structs: [],
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [],
                blocks: [
                    Block {
                        instructions: [],
                        terminator: Exit {
                            status: Literal(
                                Integer {
                                    value: 42,
                                    ty: Int,
                                },
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
