src/ir/tests/snapshots/fern__ir__tests__lower__empty.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [],
                blocks: [
                    Block {
                        instructions: [],
                        terminator: Return {
                            value: None,
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
