src/ir/tests/snapshots/fern__ir__tests__lower__literals.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        Int,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 7,
                                        ty: Int,
                                    },
                                ),
                            },
                        ],
                        terminator: Return {
                            value: None,
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
