src/ir/tests/snapshots/fern__ir__tests__lower__module_bindings.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    globals: [
        Global {
            ty: Scalar(
                Int,
            ),
            values: [
                Integer {
                    value: 40,
                    ty: Int,
                },
            ],
        },
    ],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Global(
                            GlobalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        209..210,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Binary {
                        operator: Add,
                        form: Infix,
                        left: Value(
                            ValueId(
                                0,
                            ),
                        ),
                        right: Literal(
                            Integer {
                                value: 2,
                                ty: Int,
                            },
                        ),
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Global(
                            GlobalId(
                                0,
                            ),
                        ),
                    ),
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        U8,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 1,
                                        ty: U8,
                                    },
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 2,
                                        ty: U8,
                                    },
                                ),
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                            Store {
                                place: Global(
                                    GlobalId(
                                        0,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        1,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    2,
                                ),
                            ),
                        ],
                        terminator: Exit {
                            status: Value(
                                ValueId(
                                    2,
                                ),
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
